# itcoin-fbft

./: .clang-format  .dockerignore  .gitignore  CMakeLists.txt  Dockerfile.fedora36  Dockerfile.fedora38  Dockerfile.ubuntu20.04  Dockerfile.ubuntu22.04  Makefile  README.md
apps/: CMakeLists.txt  main-test.cpp  main.cpp
apps/frost/: CMakeLists.txt  base58.py  compute_descriptor_checksum.py  frost_tests.cpp  frost_tests.hpp  frost_utils.cpp  frost_utils.hpp  main-frost.cpp
benchmark/: Benchmark framework plots.ipynb  README.md  fabfile.py  pyproject.toml  run-client.py  run-donor.py  run-replicas.py  run-signet.py  settings.json  setup-signet.py
benchmark/.ipynb_checkpoints/: Benchmark framework plots-checkpoint.ipynb
benchmark/benchmark_framework/: __init__.py  base.py  commands.py  config.py  generate.py  instance.py  local.py  logs.py  paths.py  remote.py  settings.py  utils.py
benchmark/config-examples/: experiment-0.json  experiment-1.json  experiment-2.json  plot.json  test-with-max-load.json  test-with-no-load.json  test-with-single-fault.json
benchmark/paper-config/chart-1-2/: 01-0-3fbft-0-15.json  01-0-fbft-0-15.json  01-0-pbft-0-15.json  04-0-3fbft-0-15.json  04-0-fbft-0-15.json  04-0-pbft-0-15.json  07-0-3fbft-0-15.json  07-0-fbft-0-15.json  07-0-pbft-0-15.json  10-0-3fbft-0-15.json  10-0-fbft-0-15.json  10-0-pbft-0-15.json  13-0-3fbft-0-15.json  13-0-fbft-0-15.json  13-0-pbft-0-15.json  16-0-3fbft-0-15.json  16-0-fbft-0-15.json  19-0-fbft-0-15.json  22-0-fbft-0-15.json
benchmark/paper-config/chart-3/: 04-1-fbft-0--0.01.json  10-1-fbft-0--0.01.json  10-2-fbft-0--0.01.json  10-3-fbft-0--0.01.json  19-1-fbft-0--0.01.json  19-2-fbft-0--0.01.json  19-3-fbft-0--0.01.json  22-1-fbft-0--0.01.json  22-2-fbft-0--0.01.json  22-3-fbft-0--0.01.json
benchmark/paper-config/load-chart/: 10-0-fbft-0-1.json  10-0-fbft-100-1.json  10-0-fbft-25-1.json  10-0-fbft-50-1.json  10-0-fbft-75-1.json  16-0-fbft-0-1.json  16-0-fbft-100-1.json  16-0-fbft-25-1.json  16-0-fbft-50-1.json  16-0-fbft-75-1.json  22-0-fbft-0-1.json  22-0-fbft-100-1.json  22-0-fbft-25-1.json  22-0-fbft-50-1.json  22-0-fbft-75-1.json  4-0-fbft-0-1.json  4-0-fbft-100-1.json  4-0-fbft-25-1.json  4-0-fbft-50-1.json  4-0-fbft-75-1.json
benchmark/results/: bench-failures-geographically-distributed-10-02-2023-by-height.csv  bench-failures-geographically-distributed-10-02-2023.csv  bench-load-geographically-distributed-02-2023-by-height.csv  bench-throughput-latency-comparison-geographycally-distributed-20-01-2023-by-height.csv  chart-1-2-16-12-2022-by-height.csv  chart-1-2-16-12-2022.csv  chart-3-bench-16-12-2022-by-height.csv  chart-3-bench-16-12-2022.csv  chart-3-bench-20-01-2023-by-height.csv  chart-3-bench-20-01-2023.csv  load-chart-bench-17-12-2022-by-height.csv  load-chart-bench-17-12-2022.csv  signature_overhead.csv
doc/: vscode.md  (+10 more)
src/: CMakeLists.txt  PbftConfig.cpp  PbftConfig.h  main-test.cpp  main.cpp  utils.cpp  utils.h
src/block/: extract.cpp  extract.h  generate.cpp  generate.h  psbt_utils.cpp  psbt_utils.h
src/blockchain/: BitcoinBlockchain.cpp  Blockchain.cpp  HexSerializableCBlock.cpp  HexSerializablePsbt.cpp  blockchain.h  extract.cpp  extract.h  generate.cpp  generate.h  grind.cpp  grind.h
src/config/: FbftConfig.cpp  FbftConfig.h
src/fbft/: Replica2.cpp  Replica2.h
src/fbft/actions/: Action.cpp  Execute.cpp  ProcessNewView.cpp  ReceiveBlock.cpp  ReceiveCommit.cpp  ReceiveNewView.cpp  ReceivePrePrepare.cpp  ReceivePrepare.cpp  ReceiveRequest.cpp  ReceiveViewChange.cpp  RecoverView.cpp  RoastInit.cpp  RoastReceivePreSignature.cpp  RoastReceiveSignatureShare.cpp  SendCommit.cpp  SendNewView.cpp  SendPrePrepare.cpp  SendPrepare.cpp  SendViewChange.cpp  actions.h
src/fbft/messages/: Block.cpp  Commit.cpp  Message.cpp  NewView.cpp  PrePrepare.cpp  Prepare.cpp  Request.cpp  RoastPreSignature.cpp  RoastSignatureShare.cpp  ViewChange.cpp  messages.h
src/fbft/state/: ReplicaState.cpp  state.h
src/frost/: frost.cpp  frost.hpp  frost_helpers.cpp  frost_helpers.hpp  frost_internals.hpp  secp256k1_extension.c  secp256k1_extension.h  three_fbft_helpers.cpp  three_fbft_helpers.hpp
src/network/: NetworkListener.cpp  NetworkTransport.cpp  network.h
src/pbft/: Replica2.cpp  Replica2.h
src/pbft/actions/: Action.cpp  Execute.cpp  ProcessNewView.cpp  ReceiveBlock.cpp  ReceiveCommit.cpp  ReceiveNewView.cpp  ReceivePrePrepare.cpp  ReceivePrepare.cpp  ReceiveRequest.cpp  ReceiveViewChange.cpp  RecoverView.cpp  RoastInit.cpp  RoastReceivePreSignature.cpp  RoastReceiveSignatureShare.cpp  SendCommit.cpp  SendNewView.cpp  SendPrePrepare.cpp  SendPrepare.cpp  SendViewChange.cpp  actions.h
src/pbft/messages/: Block.cpp  Commit.cpp  Message.cpp  NewView.cpp  PrePrepare.cpp  Prepare.cpp  Request.cpp  RoastPreSignature.cpp  RoastSignatureShare.cpp  ViewChange.cpp  messages.h
src/pbft/state/: ReplicaState.cpp  state.h
src/test/: boilerplate.h  fixtures.h  test_5frosted_bft.cpp  test_block_extract.cpp  test_block_generate.cpp  test_block_psbt_utils.cpp  test_blockchain_frost_wallet_bitcoin.cpp  test_blockchain_generate.cpp  test_blockchain_threefbft_wallet_bitcoin.cpp  test_blockchain_wallet_bitcoin.cpp  test_fbft_normal_operation.cpp  test_fbft_replica2.cpp  test_fbft_signing_with_roast.cpp  test_fbft_view_change_empty.cpp  test_fbft_view_change_prepared.cpp  test_messages_encoding.cpp  test_pbft_normal_operation.cpp  test_pbft_replica2.cpp  test_pbft_view_change_empty.cpp  test_pbft_view_change_prepared.cpp  test_transport_btcclient.cpp  test_utils.cpp
src/test/fixtures/: BitcoinInfraFixture.cpp  BitcoinRpcTestFixture.cpp  BtcClientFixture.cpp  PrologTestFixture.cpp  ReplicaSetFixture.cpp  ReplicaStateFixture.cpp  fixtures.h
src/test/stubs/: DummyBlockchain.cpp  DummyNetwork.cpp  DummyRoastWallet.cpp  DummyWallet.cpp  stubs.h
src/transport/: NetworkListener.cpp  NetworkTransport.cpp  btcclient.cpp  btcclient.h  network.h  zcomm.cpp  zcomm.h
src/utils/: utils.cpp  utils.h
src/wallet/: BitcoinRpcWallet.cpp  RoastWallet.cpp  RoastWalletImpl.cpp  ThreeFBFTWalletImpl.cpp  Wallet.cpp  wallet.h
(+117 files in other folders)
