[tool.poetry]
name = "benchmark_framework"
version = "0.1.0"
description = ""
authors = []

[tool.poetry.dependencies]
python = ">=3.8"
click = "^8.1.3"
numpy = "^1.23.5"
lxml = "^4.9.1"
matplotlib = "^3.6.2"
networkx = "^2.8.8"
scipy = "^1.9.3"
PyYAML = "^6.0"
pydantic = "^1.10.2"
pyzmq = "^24.0.1"
fabric = "^2.7.1"
boto3 = "^1.26.19"
patchwork = "^1.0.1"
joblib = "^1.2.0"
pandas = "^1.5.2"
seaborn = "^0.12.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[tool.poetry.group.dev.dependencies]
jupyter = "^1.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
